--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "electron-quick-start",
+  "name": "preact-photon-electron-quick-start",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "A minimal Electron application with Preact and Photon configured",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "watch": "webpack --progress --colors --watch",
+    "build": "webpack --production"
   },
   "repository": "https://github.com/electron/electron-quick-start",
   "keywords": [
@@ -12,11 +14,24 @@
     "quick",
     "start",
     "tutorial",
-    "demo"
+    "demo",
+    "preact",
+    "photon"
   ],
   "author": "GitHub",
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^1.4.1"
+  },
+  "dependencies": {
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
+    "babel-preset-react": "^6.22.0",
+    "babel-preset-stage-1": "^6.22.0",
+    "photon": "connors/photon",
+    "preact": "^7.2.0",
+    "preact-compat": "^3.13.1",
+    "preact-photon": "^1.3.0",
+    "webpack": "^2.2.1"
   }
 }
