--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "preact",
     "photon"
   ],
-  "author": "GitHub",
+  "author": "Alex Krolick",
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^1.4.1"
